add force delete pod button

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@alebcay/openlens-node-pod-menu",
-  "version": "0.1.2",
-  "description": "Node and pod menus for OpenLens",
+  "name": "@a180285/openlens-node-pod-menu",
+  "version": "0.1.3",
+  "description": "Node and pod menus for OpenLens/Lens",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alebcay/openlens-node-pod-menu.git",
+    "url": "git+https://github.com/a180285/openlens-node-pod-menu.git",
     "directory": "."
   },
   "renderer": "dist/renderer.js",
